# python-build-standalone

./: CONTRIBUTING.rst  Cargo.toml  Justfile  build.py  check.py  ci-defaults.yaml  ci-matrix.py  ci-runners.yaml  ci-targets.yaml  generate-version-metadata.py  latest-release.json  mypy.ini  pyproject.toml  python-licenses.rst  requirements.dev.txt  requirements.txt  requirements.win.txt  test-distribution.py
.github/: dependabot.yml
.github/workflows/: check.yml  linux.yml  macos.yml  publish-versions.yml  release.yml  windows.yml
cpython-unix/: Makefile  base.Dockerfile  build-autoconf.sh  build-bdb.sh  build-binutils.sh  build-bzip2.sh  build-cpython-host.sh  build-cpython.sh  build-expat.sh  build-libX11.sh  build-libXau.sh  build-libedit.sh  build-libffi-3.3.sh  build-libffi.sh  build-libpthread-stubs.sh  build-libxcb.sh  build-libxcrypt.sh  build-linux-uapi.sh  build-m4.sh  build-main.py  build-mpdecimal.sh  build-musl.sh  build-ncurses.sh  build-openssl-1.1.sh  build-openssl-3.5.sh  build-patchelf.sh  build-sqlite.sh  build-tcl.sh  build-tk.sh  build-uuid.sh  build-x11-util-macros.sh  build-xcb-proto.sh  build-xorgproto.sh  build-xtrans.sh  build-xz.sh  build-zlib.sh  build-zstd.sh  build.Dockerfile  build.cross-loongarch64.Dockerfile  build.cross-riscv64.Dockerfile  (+32 more)
cpython-windows/: build.py  patch-site-reentrant-startup-files-3.15.patch
docs/: building.rst  status.rst
pythonbuild/: cpython.py  docker.py  downloads.py  mirror.py  testdist.py  utils.py
pythonbuild/disttests/: __init__.py
scripts/: update_downloads.py
src/: github.rs  github_api_tester.py  macho.rs  main.rs  release.rs  s3.rs  validation.rs  verify_distribution.py
tests/: test_mirror.py  test_mirror_integration.py
